examples/winstt-electron/server/scratch/bench_log.txt
audio: 203.3s @ 16000Hz

--- onnx_asr quant=None ---
{"stack": "onnx_asr", "quant": "fp32", "load_s": 2.103358400000161, "infer_s": 1.2880692000003364, "audio_s": 203.2834375, "rtf": 157.82027665900785}
  text[:120]: 'Now I want to return to the conservation of mechanical energy. I have here a pendulum. I have an object that weighs 15 k'

--- onnx_asr quant=fp16 ---
{"stack": "onnx_asr", "quant": "fp16", "load_s": 0.7935328999997182, "infer_s": 3.6077933999999914, "audio_s": 203.2834375, "rtf": 56.34564260248396}
  text[:120]: 'Now I want to return to the conservation of mechanical energy. I have here a pendulum. I have an object that weighs 15 k'

--- onnx_asr quant=int8 ---
{"stack": "onnx_asr", "quant": "int8", "error": "load: Fail: [ONNXRuntimeError] : 1 : FAIL : qdq_actions.cc:137 onnxruntime::QDQ::`anonymous-namespace'::TransposeDQWeightsForMatMulNBits Missing required scale: model.decoder.embed_tokens.weight_merged_0_scale for node: model.decoder.embed_tokens.weight_transposed_DequantizeLinear"}

--- onnx_asr quant=uint8 ---
{"stack": "onnx_asr", "quant": "uint8", "error": "load: Fail: [ONNXRuntimeError] : 1 : FAIL : qdq_actions.cc:137 onnxruntime::QDQ::`anonymous-namespace'::TransposeDQWeightsForMatMulNBits Missing required scale: model.decoder.embed_tokens.weight_merged_0_scale for node: model.decoder.embed_tokens.weight_transposed_DequantizeLinear"}

--- optimum merged=True dtype=fp32 ---
Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`
E:\DL\Projects\WinSTT\server\scratch\bench_venv\Lib\site-packages\huggingface_hub\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\Users\MASTE\.cache\huggingface\hub\models--onnx-community--whisper-tiny.en. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.
To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development
  warnings.warn(message)
Moving the following attributes in the config to the generation config: {'max_length': 448, 'suppress_tokens': [1, 2, 7, 8, 9, 10, 14, 25, 26, 27, 28, 29, 31, 58, 59, 60, 61, 62, 63, 90, 91, 92, 93, 357, 366, 438, 532, 685, 705, 796, 930, 1058, 1220, 1267, 1279, 1303, 1343, 1377, 1391, 1635, 1782, 1875, 2162, 2361, 2488, 3467, 4008, 4211, 4600, 4808, 5299, 5855, 6329, 7203, 9609, 9959, 10563, 10786, 11420, 11709, 11907, 13163, 13697, 13700, 14808, 15306, 16410, 16791, 17992, 19203, 19510, 20724, 22305, 22935, 27007, 30109, 30420, 33409, 34949, 40283, 40493, 40549, 47282, 49146, 50257, 50357, 50358, 50359, 50360, 50361]}. You are seeing this warning because you've set generation parameters in the model config, as opposed to in the generation config.
Using custom `forced_decoder_ids` from the (generation) config. This is deprecated in favor of the `task` and `language` flags/config options.
The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.
{"stack": "optimum-merged-fp32", "load_s": 46.02898789999972, "infer_s": 2.6127738999998655, "audio_s": 203.2834375, "rtf": 77.8036850031342}
  text[:120]: ' Now I want to return to the conservation of mechanical energy. I have here a pendulum. I have an object that weighs 15 '

--- optimum merged=False dtype=fp32 ---
Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`
Moving the following attributes in the config to the generation config: {'max_length': 448, 'suppress_tokens': [1, 2, 7, 8, 9, 10, 14, 25, 26, 27, 28, 29, 31, 58, 59, 60, 61, 62, 63, 90, 91, 92, 93, 357, 366, 438, 532, 685, 705, 796, 930, 1058, 1220, 1267, 1279, 1303, 1343, 1377, 1391, 1635, 1782, 1875, 2162, 2361, 2488, 3467, 4008, 4211, 4600, 4808, 5299, 5855, 6329, 7203, 9609, 9959, 10563, 10786, 11420, 11709, 11907, 13163, 13697, 13700, 14808, 15306, 16410, 16791, 17992, 19203, 19510, 20724, 22305, 22935, 27007, 30109, 30420, 33409, 34949, 40283, 40493, 40549, 47282, 49146, 50257, 50357, 50358, 50359, 50360, 50361]}. You are seeing this warning because you've set generation parameters in the model config, as opposed to in the generation config.
{"stack": "optimum-split-fp32", "load_s": 53.16367020000007, "infer_s": 2.3651638000001185, "audio_s": 203.2834375, "rtf": 85.94898902984639}
  text[:120]: ' Now I want to return to the conservation of mechanical energy. I have here a pendulum. I have an object that weighs 15 '

--- optimum merged=True dtype=fp16 ---
{"stack": "optimum-merged-fp16", "error": "load: TypeError: ORTModelForConditionalGeneration._from_pretrained() got an unexpected keyword argument 'file_name'"}

--- sherpa-onnx ---
D:\a\sherpa-onnx\sherpa-onnx\sherpa-onnx/csrc/offline-recognizer-whisper-impl.h:DecodeStream:99 Only waves less than 30 seconds are supported. We process only the first 30 seconds and discard the remaining data
{"stack": "sherpa-onnx", "load_s": 0.4321141999998872, "infer_s": 4.191614400000162, "audio_s": 203.2834375, "rtf": 48.49764746966995}
  text[:120]: ' Now I want to return to the conservation of mechanical energy. I have here a pendulum. I have an object that weighs 15 '


==== SUMMARY ====
stack                                        load    infer      rtf  status
onnx_asr                                    2.10s    1.29s   157.8x  OK
onnx_asr                                    0.79s    3.61s    56.3x  OK
onnx_asr                                        -        -     0.0x  load: Fail: [ONNXRuntimeError] : 1 : FAIL : qdq_actions.cc:137 onnxruntime::QDQ:
onnx_asr                                        -        -     0.0x  load: Fail: [ONNXRuntimeError] : 1 : FAIL : qdq_actions.cc:137 onnxruntime::QDQ:
optimum-merged-fp32                        46.03s    2.61s    77.8x  OK
optimum-split-fp32                         53.16s    2.37s    85.9x  OK
optimum-merged-fp16                             -        -     0.0x  load: TypeError: ORTModelForConditionalGeneration._from_pretrained() got an unex
sherpa-onnx                                 0.43s    4.19s    48.5x  OK
